--- a/userChrome.css
+++ b/userChrome.css
@@ -3,11 +3,11 @@
 * {border: 0 !important; }
 
 /*change background color and text color of zotero toolbar and menubar*/
-#zotero-tb, #zotero-toolbar, #navigator-toolbox { background: #323234 !important;
-color: #FFFFFF !important; }
+#zotero-tb, #zotero-toolbar, #navigator-toolbox { background: #121212 !important;
+color: rgba(255, 255, 255, 0.87) !important; }
 #zotero-toolbar {border-bottom: 1px solid #1d1d1d !important;}
 /*change color of menu items to white*/
-#navigator-toolbox menu { color: white !important }
+#navigator-toolbox menu { color: rgba(255, 255, 255, 0.87) !important }
 
 /*change color of menu items in drop down menus back to black*/
 #manage-attachments-menu label, #developer-menu label, #layout-menu label, #note-font-size-menu label, #font-size-menu label, #debug-output-menu label, #new-item label { color: black !important; }
@@ -21,15 +21,15 @@ color: red !important; }
 */
 
 /*Change color of tags*/
-#zotero-pane { background: #323234 !important;
+#zotero-pane { background: #121212 !important;
 color: black !important; }
 .zotero-tb-button[type="menu"] {
   background: red !important;
 }
 
 /*change background and color of collections and items panes*/
-treechildren{ background: #323234 !important;
-color: #FFFFFF !important; }
+treechildren{ background: #121212 !important;
+color: rgba(255, 255, 255, 0.87) !important; }
 
 /*increase spacing between rows in collections and items and add a border to separate panes*/
 /*#zotero-collections-tree { border-right: 1px solid #1d1d1d !important; }*/
@@ -37,13 +37,13 @@ color: #FFFFFF !important; }
 
 /*change background and color of collections when hovering*/
 #zotero-collections-tree treechildren::-moz-tree-row(hover) { background: #7E7E7E !important;
-color: #FFFFFF !important; border: 0 !important; }
+color: rgba(255, 255, 255, 0.87) !important; border: 0 !important; }
 
 /*change color of selected item in Collections pane (My library or folders) */
-#zotero-collections-tree treechildren::-moz-tree-cell(selected) { background: #474749 !important; border: 0 !important;
+#zotero-collections-tree treechildren::-moz-tree-cell(selected) { background: #323234 !important; border: 0 !important;
 border-bottom: 1px solid #1d1d1d !important; }
 
-#zotero-collections-tree treechildren::-moz-tree-cell-text(selected) { color: #FFFFFF !important; }
+#zotero-collections-tree treechildren::-moz-tree-cell-text(selected) { color: rgba(255, 255, 255, 0.87) !important; }
 
 /*increase spacing between rows in collections and items*/
 #zotero-items-tree treechildren::-moz-tree-row { height: 30px !important; }
@@ -53,24 +53,24 @@ background-color: black !important}
 
 /*change background and color of items when hovering*/
 #zotero-items-tree treechildren::-moz-tree-row(hover) { background: #7E7E7E !important;
-color: #FFFFFF !important; border: 0 !important; }
+color: rgba(255, 255, 255, 0.87) !important; border: 0 !important; }
 
 /*change background and color of items when selecting*/
-#zotero-items-tree treechildren::-moz-tree-row(selected) { background: #474749 !important;
-color: #FFFFFF !important; border: 0 !important;
+#zotero-items-tree treechildren::-moz-tree-row(selected) { background: #323234 !important;
+color: rgba(255, 255, 255, 0.87) !important; border: 0 !important;
 border-bottom: 1px solid #1d1d1d !important; }
-#zotero-items-tree treechildren::-moz-tree-cell-text(selected) { color: #FFFFFF !important; border: 0 !important; }
+#zotero-items-tree treechildren::-moz-tree-cell-text(selected) { color: rgba(255, 255, 255, 0.87) !important; border: 0 !important; }
 
 /*change background and color of columns field selector*/
 #zotero-items-tree treecol { -moz-appearance: none !important;
-  background: #474749 !important;
-color: #FFFFFF !important;
+  background: #323234 !important;
+color: rgba(255, 255, 255, 0.87) !important;
 border-bottom: 1px solid #1d1d1d !important;
 border-right: 1px solid #1d1d1d !important; }
 
 .treecol-image { -moz-appearance: none !important;
-  background: #474749 !important;
-color: #FFFFFF !important;
+  background: #323234 !important;
+color: rgba(255, 255, 255, 0.87) !important;
 border-bottom: 1px solid #1d1d1d !important; }
 
 /*Change color of fields in item pane (clicky items) when hovering */
@@ -88,11 +88,11 @@ tabpanel { color: black !important;
 background: #7E7E7E !important; }
 
 tab[selected="true"]{ color: black !important;
-background: white !important; }
+background: rgba(255, 255, 255, 0.87) !important; }
 
 tab{ -moz-appearance: none !important;
 color: #eee !important;
-background: #474749 !important;
+background: #323234 !important;
 border-top: 0px solid black !important;
 border-left: 0px solid black !important;
 border-right: 1px solid #1d1d1d !important;
@@ -106,32 +106,32 @@ box-shadow: inset 0px 0px 0px !important;
 border-radius: 0px 0px 0 0 !important; }
 
 /*change items in item pane besides tabs*/
-#zotero-duplicates-merge-pane > groupbox > .groupbox-body { background: #323234 !important;
-  color: #FFFFFF !important;
+#zotero-duplicates-merge-pane > groupbox > .groupbox-body { background: #121212 !important;
+  color: rgba(255, 255, 255, 0.87) !important;
   border: 0 !important; }
 
-/*#zotero-item-pane-content > groupbox { border: 0 !important; background: #323234 !important;
-color: #FFFFFF !important; }*/
+/*#zotero-item-pane-content > groupbox { border: 0 !important; background: #121212 !important;
+color: rgba(255, 255, 255, 0.87) !important; }*/
 
-#zotero-item-pane-content > groupbox > .groupbox-body { border: 0 !important; background: #323234 !important;
-color: #FFFFFF !important; }
+#zotero-item-pane-content > groupbox > .groupbox-body { border: 0 !important; background: #121212 !important;
+color: rgba(255, 255, 255, 0.87) !important; }
 
 /*change color of retraction details background*/
 #retraction-details { background: #7f0000 !important; }
 
 /*tabs in Item pane*/
-#zotero-item-pane-content tabpanel { background: #474749 !important;
-color: #FFFFFF !important; }
+#zotero-item-pane-content tabpanel { background: #323234 !important;
+color: rgba(255, 255, 255, 0.87) !important; }
 
 /*fixed color in drop-down tags in tabpanel: see https://css-tricks.com/solved-with-css-dropdown-menus/*/
 #tags-box-container ul li ul { color: black !important; }
 
-#zotero-item-pane-content tab[selected="true"]{ background: #474749 !important;
+#zotero-item-pane-content tab[selected="true"]{ background: #323234 !important;
 border-top: 3px solid #0a84ff !important;}
 
 #zotero-item-pane-content tab{ -moz-appearance: none !important;
 color: #eee !important;
-background: #323234 !important;
+background: #121212 !important;
 border-top: 0px solid #0a84ff !important;
 border-left: 0px solid rgba(127,127,127,0.2) !important;
 border-right: 1px solid #1d1d1d !important;
@@ -139,7 +139,7 @@ border-radius: 0px !important;
 border-bottom-left-radius: 0px !important;
 border-bottom-right-radius: 0px !important; }
 
-#zotero-item-pane-content tab:hover{ color: #FFFFFF !important;
+#zotero-item-pane-content tab:hover{ color: rgba(255, 255, 255, 0.87) !important;
 background: #7E7E7E !important;
 box-shadow: inset 0px 0px 0px !important;
 border-radius: 0px 0px 0 0 !important; }
@@ -148,42 +148,42 @@ border-radius: 0px 0px 0 0 !important; }
 #item-type-menu
 {
 	-moz-appearance: none;
-	color: white !important;
-	height: 1.5em !important;
-	min-height: 1.5em !important;
+	color: rgba(255, 255, 255, 0.87) !important;
+	height: 1.25em !important;
+	min-height: 1.25em !important;
 	padding: 0 0 0 2px !important;
 	margin: 1px 5px 0 1px !important;
-	max-height: 1.5em !important;
+	max-height: 1.25em !important;
 	border: 1px solid transparent;
 	background-color: transparent;
 }
 /*define color of date-field-status*/
 #zotero-date-field-status
 {
-	color: #ffffff !important;
+	color: rgba(255, 255, 255, 0.87) !important;
 	padding: 0 10px 0 1px !important;
 }
 
 /*preferences dialog*/
 #zotero-prefpane-general, #zotero-prefpane-sync, #zotero-prefpane-export, #zotero-prefpane-advanced-keys-tab, #wordProcessors, #zotero-quickCopy-format, #sync-reset-form { color: black !important;
 background: #7E7E7E !important; }
-#zotero-prefpane-general title { background: #474749 !important;
-color: #FFFFFF !important; }
+#zotero-prefpane-general title { background: #323234 !important;
+color: rgba(255, 255, 255, 0.87) !important; }
 
 prefwindow { color: black !important;
 background: #7E7E7E !important; }
 
-prefwindow .chromeclass-toolbar { color: #FFFFFF !important;
-background: #323234 !important; }
+prefwindow .chromeclass-toolbar { color: rgba(255, 255, 255, 0.87) !important;
+background: #121212 !important; }
 
 /*about dialog*/
 #aboutcontent
-{	background: #474749 !important;
-  color: white !important;
+{	background: #323234 !important;
+  color: rgba(255, 255, 255, 0.87) !important;
 	padding: 10px; }
 
 #version
-{	color: white !important; }
+{	color: rgba(255, 255, 255, 0.87) !important; }
 
 /*advanced search dialog*/
 #zotero-advanced-search-dialog #zotero-search-box-controls {	color: black !important;
